feat: list world storage (#56)
* feat: list world storage

* fix: make search case sensitive

* feat: list player storage (#57)

* feat: list player storage

* fix: make search case sensitive
